Closed
Bug 1522415
Opened 7 years ago
Closed 7 years ago
Crash in mozilla::gfx::SourceSurfaceD2D1::SourceSurfaceD2D1
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla66
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox64 | --- | unaffected |
firefox65 | --- | unaffected |
firefox66 | --- | fixed |
People
(Reporter: calixte, Assigned: bas.schouten)
References
(Blocks 1 open bug)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-03240ace-6425-4699-b01e-738b90190124.
Top 10 frames of crashing thread:
0 xul.dll mozilla::gfx::SourceSurfaceD2D1::SourceSurfaceD2D1 gfx/2d/SourceSurfaceD2D1.cpp:21
1 xul.dll mozilla::gfx::DrawTargetD2D1::Snapshot gfx/2d/DrawTargetD2D1.cpp:113
2 xul.dll class RefPtr<mozilla::gfx::SourceSurface> mozilla::gfx::SourceSurfaceCapture::ResolveImpl gfx/2d/SourceSurfaceCapture.cpp:150
3 xul.dll mozilla::gfx::SourceSurfaceCapture::Resolve gfx/2d/SourceSurfaceCapture.cpp:102
4 xul.dll mozilla::gfx::DrawTargetD2D1::GetImageForSurface gfx/2d/DrawTargetD2D1.cpp:2107
5 xul.dll mozilla::gfx::DrawTargetD2D1::DrawSurface gfx/2d/DrawTargetD2D1.cpp:205
6 xul.dll mozilla::gfx::DrawSurfaceCommand::ExecuteOnDT gfx/2d/DrawCommands.h:125
7 xul.dll void mozilla::gfx::DrawTargetCaptureImpl::ReplayToDrawTarget gfx/2d/DrawTargetCapture.cpp:315
8 xul.dll void mozilla::layers::PaintThread::AsyncPaintTask gfx/layers/PaintThread.cpp:203
9 xul.dll nsresult mozilla::detail::RunnableFunction<`lambda at z:/build/build/src/gfx/layers/PaintThread.cpp:174:30'>::Run xpcom/threads/nsThreadUtils.h:546
There are 6 crashes (from 6 installations) in nightly 66 with buildid 20190123165704. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1521368.
[1] https://hg.mozilla.org/mozilla-central/rev?node=9ec304cd5e28
Flags: needinfo?(bas)
Assignee | ||
Comment 1•7 years ago
|
||
Assignee | ||
Updated•7 years ago
|
Assignee: nobody → bas
Status: NEW → ASSIGNED
Flags: needinfo?(bas)
Pushed by bschouten@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/448d2641ef7d
Properly track initialization state in case a device reset occurs during initialization. r=rhunt
Comment 3•7 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla66
You need to log in
before you can comment on or make changes to this bug.
Description
•